--- a/DisplayMultiplicationTable/app/src/main/res/values/strings.xml
+++ b/DisplayMultiplicationTable/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DisplayMultiplicationTable</string>
+    <string name="enter_number">Enter Number</string>
+    <string name="table">Table</string>
+    <string name="your_table">Your Table</string>
 </resources>
